WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189532
Fix color stop blending in conic gradients for stops past 1
https://bugs.webkit.org/show_bug.cgi?id=189532
Summary
Fix color stop blending in conic gradients for stops past 1
Megan Gardner
Reported
2018-09-11 17:09:42 PDT
Fix color stop blending for stops past 1
Attachments
Patch
(4.40 KB, patch)
2018-09-11 17:13 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews117 for mac-sierra
(3.02 MB, application/zip)
2018-09-11 19:09 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews102 for mac-sierra
(2.71 MB, application/zip)
2018-09-11 20:13 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews126 for ios-simulator-wk2
(2.53 MB, application/zip)
2018-09-11 20:22 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews104 for mac-sierra-wk2
(3.12 MB, application/zip)
2018-09-11 21:02 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews206 for win-future
(12.80 MB, application/zip)
2018-09-11 22:14 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.30 KB, patch)
2018-09-12 12:59 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch
(6.51 KB, patch)
2018-09-12 13:17 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.51 KB, patch)
2018-09-12 14:19 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.65 KB, patch)
2018-09-12 14:28 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Patch for landing
(6.38 KB, patch)
2018-09-12 17:28 PDT
,
Megan Gardner
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2018-09-11 17:10:36 PDT
<
rdar://problem/44158221
>
Megan Gardner
Comment 2
2018-09-11 17:13:26 PDT
Created
attachment 349495
[details]
Patch
Megan Gardner
Comment 3
2018-09-11 17:13:27 PDT
<
rdar://problem/44158221
>
EWS Watchlist
Comment 4
2018-09-11 19:09:34 PDT
Comment on
attachment 349495
[details]
Patch
Attachment 349495
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9182551
New failing tests: fast/gradients/conic-repeating-last-stop.html
EWS Watchlist
Comment 5
2018-09-11 19:09:36 PDT
Created
attachment 349503
[details]
Archive of layout-test-results from ews117 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-09-11 20:13:13 PDT
Comment on
attachment 349495
[details]
Patch
Attachment 349495
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9184369
New failing tests: fast/gradients/conic-repeating-last-stop.html
EWS Watchlist
Comment 7
2018-09-11 20:13:15 PDT
Created
attachment 349510
[details]
Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 8
2018-09-11 20:22:16 PDT
Comment on
attachment 349495
[details]
Patch
Attachment 349495
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/9183791
New failing tests: fast/gradients/conic-repeating-last-stop.html
EWS Watchlist
Comment 9
2018-09-11 20:22:18 PDT
Created
attachment 349512
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
EWS Watchlist
Comment 10
2018-09-11 21:02:12 PDT
Comment on
attachment 349495
[details]
Patch
Attachment 349495
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9185225
New failing tests: fast/gradients/conic-repeating-last-stop.html
EWS Watchlist
Comment 11
2018-09-11 21:02:14 PDT
Created
attachment 349516
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 12
2018-09-11 22:14:12 PDT
Comment on
attachment 349495
[details]
Patch
Attachment 349495
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/9186380
New failing tests: fast/gradients/conic-repeating-last-stop.html
EWS Watchlist
Comment 13
2018-09-11 22:14:24 PDT
Created
attachment 349521
[details]
Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Megan Gardner
Comment 14
2018-09-12 12:59:33 PDT
Created
attachment 349569
[details]
Patch
Megan Gardner
Comment 15
2018-09-12 13:17:40 PDT
Created
attachment 349577
[details]
Patch
Simon Fraser (smfr)
Comment 16
2018-09-12 13:28:04 PDT
Comment on
attachment 349577
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=349577&action=review
Make sure the EWS is green before landing.
> Source/WebCore/ChangeLog:12 > + Test: fast/gradients/conic-repeating-last-stop.html > + > + Calculation was wrong, fixed it, and wrote a test that failed > + without the change, and passes with it.
We normally put the Test: line after the description.
Megan Gardner
Comment 17
2018-09-12 14:19:03 PDT
Created
attachment 349580
[details]
Patch for landing
Megan Gardner
Comment 18
2018-09-12 14:28:46 PDT
Created
attachment 349582
[details]
Patch for landing
Megan Gardner
Comment 19
2018-09-12 17:28:20 PDT
Created
attachment 349605
[details]
Patch for landing
WebKit Commit Bot
Comment 20
2018-09-13 17:25:25 PDT
Comment on
attachment 349605
[details]
Patch for landing Clearing flags on attachment: 349605 Committed
r235999
: <
https://trac.webkit.org/changeset/235999
>
WebKit Commit Bot
Comment 21
2018-09-13 17:25:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug