Fix color stop blending in conic gradients for stops past 1 https://bugs.webkit.org/show_bug.cgi?id=189532 <rdar://problem/44158221>

Reviewed by Simon Fraser.

Source/WebCore:

Calculation was wrong, fixed it, and wrote a test that failed
without the change, and passes with it.

Test: fast/gradients/conic-repeating-last-stop.html

* css/CSSGradientValue.cpp:
(WebCore::ConicGradientAdapter::normalizeStopsAndEndpointsOutsideRange):

LayoutTests:

Tests that last stop in the gradient is correct.

* fast/gradients/conic-repeating-last-stop-expected.html: Added.
* fast/gradients/conic-repeating-last-stop.html: Added.
* platform/ios-12/TestExpectations:
* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/204579@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235999 268f45cc-cd09-0410-ab3c-d52691b4dbfc